# Atlas_rtsp

InferOfflineVideo/InferOfflineVideo/: CMakeLists.txt
InferOfflineVideo/InferOfflineVideo/Common/: Singleton.cpp  Singleton.h
InferOfflineVideo/InferOfflineVideo/Module/DataType/: DataType.h
InferOfflineVideo/InferOfflineVideo/Module/ModelInfer/: ModelInfer.cpp
InferOfflineVideo/InferOfflineVideo/Module/PostProcess/: PostProcess.cpp  PostProcess.h  Yolov3Post.h  config.h
InferOfflineVideo/InferOfflineVideo/Module/VideoDecoder/: VideoDecoder.cpp
InferOfflineVideo/InferOfflineVideo/Streaming_yolo/: main
InferOfflineVideo/ascendbase/src/Base/ErrorCode/: ErrorCode.h
InferOfflineVideo/ascendbase/src/Base/Framework/ModuleManager/: ModuleManager.cpp
InferOfflineVideo/ascendbase/src/Base/Log/: Log.cpp  Log.h
InferOfflineVideo/ascendbase/src/Base/Statistic/: Statistic.cpp  Statistic.h
reciever/pybind11_opencv/: CMakeLists.txt  example.cpp  test.py
reciever/udp_image_streaming/: Client.cpp  Server.cpp
